--- a/assets/Others/ChatGPT.html
+++ b/assets/Others/ChatGPT.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | ChatGPT</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main row pt-5">
@@ -27,7 +27,7 @@
         </div>
     </div>
         
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbw8Qx9XZB5fNlsa_aaXM-kDgmRzd7wPIgoUWkd_4Yvmg9Qqo4m9TF404KbYNBo1Bz8b/exec'
         const form = document.forms['ChatGPT']
