--- a/assets/Others/Google-ads.html
+++ b/assets/Others/Google-ads.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | Google Ads</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main pt-5 row">
@@ -26,7 +26,7 @@
             <iframe width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/1doNbNtlcKEioOvHaJb49Wk4S1814CWRjlOfG_9zEtDQ/edit?usp=sharing"></iframe>
         </div>
     </div>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyVpCb8IADsom8f-XixLGk1hvXoKmRkJnfHemxmkZawdog2yBokia5Eh47dO8sWQfQz/exec'
         const form = document.forms['Google-ads']
