--- a/assets/Others/SEO-affiliate.html
+++ b/assets/Others/SEO-affiliate.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | SEO & Affiliate</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main row pt-5">
@@ -26,7 +26,7 @@
             <iframe width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/1hIILfXI-p1FrSfoPmYBUncfWDWPWPpZmGMUKIuRxXd8/edit?usp=sharing"></iframe>
         </div>
     </div>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbw32sE4O7fdNL3Ivt4i5R1TJ0MunsZSyKpevlHEQYy_bzJ4Zw2AnWq1Yho3ZQWxp8FFug/exec'
         const form = document.forms['SEO-Affiliate']
