--- a/assets/Others/TikTokAds.html
+++ b/assets/Others/TikTokAds.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | TikTok Ads</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main row pt-5">
@@ -30,7 +30,7 @@
 
 
 
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxGI6_AC4fkmXk8WarP-L-R_ReYHz5FwhDfhMOKTmj8RrIIPQjLBA2HvqRHSFi15ssh/exec'
         const form = document.forms['TikTok-Ads']
