--- a/assets/Others/adsense.html
+++ b/assets/Others/adsense.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | Adsense</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main pt-5 row">
@@ -27,7 +27,7 @@
         </div>
     </div>
     
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwK4_hGIBRdJifxlw-hbK9C66ROUu_KVuxgVC_zF4v7MdLklcX3Y495GYiFaqCXCRo_kw/exec'
         const form = document.forms['Adsense-form']
