--- a/assets/Others/branding-marketing-psychology.html
+++ b/assets/Others/branding-marketing-psychology.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Digital Agency Bd | Branding & Marketing Psychology</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main pt-5 row">
@@ -27,7 +27,7 @@
             <iframe width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/1u_usyA-JCioY-XKtBgRDGWZSswjRJYmdoNnwEsCAYuo/edit?usp=sharing"></iframe>
         </div>
     </div>        
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyp_hRLG1b9FGoE-IGN9nMMftmmPdxuTWq2a_8c3WrRGPReUjxS3-897Wr3QKKRY6KfZQ/exec'
         const form = document.forms['Branding-Marketing-Psychology']
