--- a/assets/Others/facebook.html
+++ b/assets/Others/facebook.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | Facebook</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main pt-5 row">
@@ -26,7 +26,7 @@
             <iframe width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/1yBsTmj6l_XPuccsaGD8cMX_oCt6zzZsF4fIXG3FAQnk/edit?usp=sharing"></iframe>
         </div>
     </div>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycby9J3xwBTt0ub4E1_8J9S9liSkqvR43BU2v37OZ4Mrmb14uObYvSfvQJo779Xxvo8n2xQ/exec'
         const form = document.forms['Facebook']
