--- a/assets/Others/freelancing-client-hunting.html
+++ b/assets/Others/freelancing-client-hunting.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | Freelancing & Client Hunting</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main pt-5 row">
@@ -26,7 +26,7 @@
             <iframe width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/1zP8bnFrrOUPyd9stuXa2HW71-AHqwceWZoD2HZEkYTI/edit?usp=sharing"></iframe>
         </div>
     </div>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyRFtr5lrY54npY9xuaK3HB4im-8RFA0rBLFJ6bQI2Nl-irjRrJ09SnpyyX9cP77snx-Q/exec'
         const form = document.forms['Freelancing-Client-Hunting']
