--- a/assets/Others/online-design.html
+++ b/assets/Others/online-design.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | Online Design</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     <div class="form-main pt-5 row">
@@ -26,7 +26,7 @@
             <iframe width="100%" height="100%" src="https://docs.google.com/spreadsheets/d/1ZwYBiOyDN7sjVuk9VGi8gR5FqTI2JeqpTAwr0-Z-dnQ/edit?usp=sharing"></iframe>
         </div>
     </div>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxCuD9RfjKKY-mwMMqsEXemJ_LYh6FfcF9IluO1PFFU2_mNAmNHC132cj3ltzqyl-Wq/exec'
         const form = document.forms['Online-Design']
