--- a/assets/Others/understanding-digital-marketing.html
+++ b/assets/Others/understanding-digital-marketing.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency Bd | Understanding Digital Marketing</title>
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="container pb-5">
     
@@ -28,7 +28,7 @@
         </div>
     </div>
         
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyhfCrr3ZFL1KkXJsuRfo7ncKepJrmvdiUJD2jRNyNbLceY4kSsofMnlr6rFsySzlZJGg/exec'
         const form = document.forms['Understanding-Digital-Marketing']
@@ -44,7 +44,7 @@
 
 
       </script>
-      <script src="/assets/js/script.js"></script>
+      <script src="../js/script.js"></script>
 </body>
 </html>
 
